<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    tools:ignore="Typos"> <!-- Ignora las advertencias de ortografía en español -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_titulo"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/etRut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_rut"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"
                android:inputType="textPersonName"
                android:autofillHints="name" />

            <EditText
                android:id="@+id/etApellidoPaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_apellido_p"
                android:inputType="textPersonName"
                android:autofillHints="personFamilyName" />

            <EditText
                android:id="@+id/etApellidoMaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_apellido_m"
                android:inputType="textPersonName"
                android:autofillHints="personFamilyName" />

            <EditText
                android:id="@+id/etEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edad"
                android:inputType="number"
                android:importantForAutofill="no"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genero_titulo"
                android:layout_marginTop="8dp"/>

            <RadioGroup
                android:id="@+id/rgGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genero_masculino"/>
                <RadioButton
                    android:id="@+id/rbFemenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genero_femenino"/>
            </RadioGroup>

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefono"
                android:inputType="phone"
                android:autofillHints="phone" />

            <EditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_direccion"
                android:inputType="textPostalAddress"
                android:autofillHints="postalAddress" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_registrar"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>